Add Mutable Variables to Immutable Variables

--- a/PythonTraining.ipynb
+++ b/PythonTraining.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PythonTraining.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP6llhXkrOhStRPW0AgWfjk",
+      "authorship_tag": "ABX9TyMQtu48cPq5s0wq0iRo1CDp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,6 +37,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "[Immutable Variable 1](https://freecontent.manning.com/wp-content/uploads/Bell_MaIO_01.png)        [Immutable Variable 2](https://freecontent.manning.com/wp-content/uploads/Bell_MaIO_02.png)   [Mutable Variables3](https://freecontent.manning.com/wp-content/uploads/Bell_MaIO_03.png)"
+      ],
+      "metadata": {
+        "id": "DfYJv2r8N5RB"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -44,7 +53,8 @@
       },
       "outputs": [],
       "source": [
-        "# Immutable Variables & Refb by value\n",
+        "# Immutable Variables & Call by value\n",
+        "# Add 1 to variable x\n",
         "x = 10\n",
         "def plus1(x):\n",
         "  x+=1\n",
@@ -65,7 +75,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Immutable Variables & Ref by value\n",
+        "# Immutable Variables & Call by value\n",
         "def plus1(x):\n",
         "  # id(x)\n",
         "  print(f'x is {type(x)} and the value of x is:',x)\n",
@@ -85,9 +95,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8JwK8gOPB1dB",
-        "outputId": "f27c2cb1-f1b0-41a4-dcf3-0b911b2c5f03"
+        "outputId": "758c10ab-0f9d-44c8-cd1b-22ca8cc1a5a6"
       },
-      "execution_count": 9,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -107,13 +117,53 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "# Mutable Variables & Call by Ref\n",
+        "# Add 1 to each element value of list l\n",
+        "def plus1(l):\n",
+        "  print(f'id(l) {l} is:',id(l))\n",
+        "  for i in range(len(l)):\n",
+        "    l[i]=l[i]+1\n",
+        "  print(f'id(l) {l} is:',id(l))\n",
+        "  return l\n",
+        "\n",
+        "l=[1,2,3,4,5]\n",
+        "plus1(l)\n",
+        "print(f'id(l) {l} is:',id(l))\n",
+        "print(l)\n",
+        "print(f'Type of l is {type(l)}')"
       ],
       "metadata": {
-        "id": "zGehi78lCf8l"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zGehi78lCf8l",
+        "outputId": "574d58e6-ac29-45d2-ef7b-90eaf1e72c8f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "id(l) [1, 2, 3, 4, 5] is: 140333697762640\n",
+            "id(l) [2, 3, 4, 5, 6] is: 140333697762640\n",
+            "id(l) [2, 3, 4, 5, 6] is: 140333697762640\n",
+            "[2, 3, 4, 5, 6]\n",
+            "Type of l is <class 'list'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# In Python Immutable Varibales are \"int, float, bool, string, unicode, tuple\", 😆\n",
+        "# Mutable variables are \"list, dictionary, set\" 😃\n",
+        "# it is important \"Custom classes are generally mutable\" 😀"
+      ],
+      "metadata": {
+        "id": "g6V68-zMPSgb"
+      }
     }
   ]
 }
