--- a/PythonVariables.ipynb
+++ b/PythonVariables.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "PythonVariables.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOpFKZG105OJzqL655okDLL",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyPUENUxowDM032nHktlz2Ec",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -160,6 +161,110 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# **Python Data Types**\n",
+        "# int, float, string, Boolean\n",
+        "# List, Tuple, set, Dictionary"
+      ],
+      "metadata": {
+        "id": "I3OS2dkVpuDS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = 10  # integer\n",
+        "print(type(a))\n",
+        "b= 10.0 # float\n",
+        "print(type(b))\n",
+        "c1='Hello world!' # string\n",
+        "c2=\"Hello python's world!\"  # string\n",
+        "c3= \"\"\" I am writing the first \n",
+        "        code here as he said \"The first Python file!\"\n",
+        " \"\"\"  # string\n",
+        "print(type(c1),type(c2),type(c3))\n",
+        "\n",
+        "\n",
+        "lst1= list([])\n",
+        "lst2=[]\n",
+        "print(type(lst1),type(lst2))\n",
+        "\n",
+        "st1=set([])\n",
+        "print(type(st1))\n",
+        "\n",
+        "dct1=dict({})\n",
+        "dct2={}\n",
+        "print(type(dct1),type(dct2))\n",
+        "\n",
+        "tpl1=(1,2,3,4)\n",
+        "tpl2= 1,2,3\n",
+        "print(type(tpl1),type(tpl2))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xGAJehrnqLMQ",
+        "outputId": "5777f3b8-63cf-4cbd-8b79-894b40d4501d"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'int'>\n",
+            "<class 'float'>\n",
+            "<class 'str'> <class 'str'> <class 'str'>\n",
+            "<class 'list'> <class 'list'>\n",
+            "<class 'set'>\n",
+            "<class 'dict'> <class 'dict'>\n",
+            "<class 'tuple'> <class 'tuple'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Convert datatypes\n",
+        "print(type(1.0))      # float\n",
+        "print(type(int(1.0))) #convert to int\n",
+        "\n",
+        "print(type(float(2))) # conver to float\n",
+        "\n",
+        "print(type(str(1))) # convert to str\n",
+        "\n",
+        "print(type([tpl1]))\n",
+        "print(type(list(tpl2)))\n",
+        "print(type(tuple(lst1)))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "n5PgnQF1r_UX",
+        "outputId": "9d582bd7-33d2-44c4-e39e-0ec5d19e27d7"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'float'>\n",
+            "<class 'int'>\n",
+            "<class 'float'>\n",
+            "<class 'str'>\n",
+            "<class 'list'>\n",
+            "<class 'list'>\n",
+            "<class 'tuple'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# **Getsizof objects in python**\n",
         "#In python, the usage of sys.getsizeof() can be done to find the storage size of a particular object that occupies some space in the memory. This function returns the size of the object in <*bytes*>. It takes at most two arguments i.e Object itself.\n",
         "# Each integer 28 Byte\n",
@@ -212,17 +317,6 @@
           "execution_count": 53
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "vtEW62XzbvZw"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
